fixed an issue with x overflow

--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ p {
 
 img {
   width: 80%;
-  padding: 50px;
+  padding: 50px 0;
 }
 
 button {
